--- a/about.html
+++ b/about.html
@@ -6,13 +6,13 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="Travel Website">
    <!-- Link Font Awesome -->
-   <link rel="stylesheet" href="../css/all.min.css">
+   <link rel="stylesheet" href="/css/all.min.css">
    <!-- Link Favicon -->
-   <link rel="shortcut icon" href="../img/fav-icon.png" type="image/x-icon">
+   <link rel="shortcut icon" href="/img/fav-icon.png" type="image/x-icon">
    <!-- Link Bootstrap -->
-   <link rel="stylesheet" href="../css/bootstrap.min.css">
+   <link rel="stylesheet" href="/css/bootstrap.min.css">
    <!-- Link Custom Css -->
-   <link rel="stylesheet" href="../css/about.css">
+   <link rel="stylesheet" href="/css/about.css">
    <title>THE UNRAVEL | ABOUT</title>
 </head>
 <body>
@@ -232,11 +232,11 @@
       </div>
 
    </footer>
-   <script src="../js/jquery.3.4.1.js"></script>
-   <script src="../js/owl.carousel.min.js"></script>
-   <script src="../js/bootstrap.min.js"></script>
-   <script src="../js/aos.js"></script>
-   <script src='../js/index.js'></script>
-   <script src="../js/all.min.js"></script>
+   <script src="/js/jquery.3.4.1.js"></script>
+   <script src="/js/owl.carousel.min.js"></script>
+   <script src="/js/bootstrap.min.js"></script>
+   <script src="/js/aos.js"></script>
+   <script src='/js/index.js'></script>
+   <script src="/js/all.min.js"></script>
 </body>
 </html>
