--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="Travel Website">
    <!-- Link Font Awesome -->
-   <link rel="stylesheet" href="../css/all.min.css">
+   <link rel="stylesheet" href="/css/all.min.css">
    <!-- Link Favicon -->
-   <link rel="shortcut icon" href="../img/fav-icon.png" type="image/x-icon">
+   <link rel="shortcut icon" href="/img/fav-icon.png" type="image/x-icon">
    <!-- Link Data Aos -->
-   <link rel="stylesheet" href="../css/aos.css">
+   <link rel="stylesheet" href="/css/aos.css">
    <!-- Link Owl Carousel -->
-   <link rel="stylesheet" href="../css/owl.carousel.min.css">
+   <link rel="stylesheet" href="/css/owl.carousel.min.css">
    <!-- <link rel="stylesheet" href="../css/owl.theme.default.min.css"> -->
    <!-- Link Bootstrap -->
-   <link rel="stylesheet" href="../css/bootstrap.min.css">
+   <link rel="stylesheet" href="/css/bootstrap.min.css">
    <!-- Link LoadMore -->
-   <link rel="stylesheet" href="../css/load-more-button.css">
+   <link rel="stylesheet" href="/css/load-more-button.css">
    <!-- Link Custom Css -->
-   <link rel="stylesheet" href="../css/style.css">
+   <link rel="stylesheet" href="/css/style.css">
    <title>THE UNRAVEL | HOME</title>
 </head>
 <body>
@@ -977,11 +977,11 @@
       </div>
 
    </footer>
-   <script src="../js/jquery.3.4.1.js"></script>
-   <script src="../js/owl.carousel.min.js"></script>
-   <script src="../js/bootstrap.min.js"></script>
-   <script src="../js/aos.js"></script>
-   <script src='../js/index.js'></script>
-   <script src="../js/all.min.js"></script>
+   <script src="/js/jquery.3.4.1.js"></script>
+   <script src="/js/owl.carousel.min.js"></script>
+   <script src="/js/bootstrap.min.js"></script>
+   <script src="/js/aos.js"></script>
+   <script src='/js/index.js'></script>
+   <script src="/js/all.min.js"></script>
 </body>
 </html> 
