--- a/services.html
+++ b/services.html
@@ -6,16 +6,16 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="Travel Website">
    <!-- Link Font Awesome -->
-   <link rel="stylesheet" href="../css/all.min.css">
+   <link rel="stylesheet" href="/css/all.min.css">
    <!-- Link Favicon -->
-   <link rel="shortcut icon" href="../img/fav-icon.png" type="image/x-icon">
+   <link rel="shortcut icon" href="/img/fav-icon.png" type="image/x-icon">
    <!-- Link Bootstrap -->
    <!-- Link Owl Carousel -->
-   <link rel="stylesheet" href="../css/owl.carousel.min.css">
-   <link rel="stylesheet" href="../css/owl.theme.default.min.css">
-   <link rel="stylesheet" href="../css/bootstrap.min.css">
+   <link rel="stylesheet" href="/css/owl.carousel.min.css">
+   <link rel="stylesheet" href="/css/owl.theme.default.min.css">
+   <link rel="stylesheet" href="/css/bootstrap.min.css">
    <!-- Link Custom Css -->
-   <link rel="stylesheet" href="../css/services.css">
+   <link rel="stylesheet" href="/css/services.css">
    <title>THE UNRAVEL | SERVICES</title>
 </head>
 <body>
@@ -390,9 +390,9 @@
       </div>
    </footer>
    </section>
-   <script src="../js/jquery.3.4.1.js"></script>
-   <script src="../js/bootstrap.min.js"></script>
-   <script src='../js/index.js'></script>
-   <script src="../js/all.min.js"></script>
+   <script src="/js/jquery.3.4.1.js"></script>
+   <script src="/js/bootstrap.min.js"></script>
+   <script src='/js/index.js'></script>
+   <script src="/js/all.min.js"></script>
 </body>
 </html> 
