--- a/about.html
+++ b/about.html
@@ -13,6 +13,9 @@
    <link rel="stylesheet" href="/css/bootstrap.min.css">
    <!-- Link Custom Css -->
    <link rel="stylesheet" href="/css/about.css">
+   <!-- Font -->
+   <link rel="preconnect" href="https://fonts.gstatic.com">
+   <link href="https://fonts.googleapis.com/css2?family=Changa&display=swap" rel="stylesheet">
    <title>THE UNRAVEL | ABOUT</title>
 </head>
 <body>
@@ -24,23 +27,23 @@
                <i class="fas fa-times"></i>
             </div>
             <a href="" class="logo-img" src="" style="color:black;">
-               <img src="../img/fav-icon.png" alt="">
+               <img src="./img/fav-icon.png" alt="">
                UNRAVEL</a>
             <ul class="nav-list">
                <li class="nav-item">
-                  <a href="./home.html" class="nav-link nav-1">Home</a>
+                  <a href="index.html" class="nav-link nav-1">Home</a>
                </li>
                <li class="nav-item">
-                  <a href="./blog.html" class="nav-link nav-1">Blog</a>
+                  <a href="blog.html" class="nav-link nav-1">Blog</a>
                </li>
                <li class="nav-item">
-                  <a href="./travel.html" class="nav-link nav-1">Travel</a>
+                  <a href="travel.html" class="nav-link nav-1">Travel</a>
                </li>
                <li class="nav-item">
-                  <a href="./services.html" class="nav-link nav-1">Services</a>
+                  <a href="services.html" class="nav-link nav-1">Services</a>
                </li>
                <li class="nav-item">
-                  <a href="./about.html" class="nav-link nav-1">About</a>
+                  <a href="about.html" class="nav-link nav-1">About</a>
                </li>
             </ul>
          </nav>
@@ -52,7 +55,7 @@
          <div class="container ">
             <div class="row">
                <div class="col-xl-6 col-md-6 col-sm-12">
-                  <img src="../img/banner-image.png" alt="">
+                  <img src="./img/banner-image.png" alt="">
                </div>
                <div class="col-xl-6 col-md-6 col-sm-12 about">
                   <div class="about-us">
@@ -105,22 +108,22 @@
                <div class="col-xl-6 col-md-6 col-sm-12 py-4">
                   <div class="row bg-fee">
                      <div class="col-4 bg-op">
-                        <img src="../brand/brsnds-02.png" alt="">
+                        <img src="./brand/brsnds-02.png" alt="">
                      </div>
                      <div class="col-4 bg-op">
-                        <img src="../brand/brsnds-04.png" alt="">
+                        <img src="./brand/brsnds-04.png" alt="">
                      </div>
                      <div class="col-4 bg-op">
-                        <img src="../brand/brsnds-02.png" alt="">
+                        <img src="./brand/brsnds-02.png" alt="">
                      </div>
                      <div class="col-4 bg-op">
-                        <img src="../brand/brand-05.png" alt="">
+                        <img src="./brand/brand-05.png" alt="">
                      </div>
                      <div class="col-4 bg-op">
-                        <img src="../brand/brsnds-04.png" alt="">
+                        <img src="./brand/brsnds-04.png" alt="">
                      </div>
                      <div class="col-4 bg-op">
-                        <img src="../brand/brand-05.png" alt="">
+                        <img src="./brand/brand-05.png" alt="">
                      </div>
                   </div>
                </div>
@@ -170,34 +173,34 @@
                <div class="row insta" >
                   <div class="col-xl-4 col-3" >
                      <a href="">
-                        <img src="../background/photo1.jpeg" alt="">
+                        <img src="./background/photo1.jpeg" alt="">
                      </a>
                   </div>
                   <div class="col-xl-4 col-3">
                      <a href="">
-                        <img src="../background/photo1.jpeg" alt="">
+                        <img src="./background/photo1.jpeg" alt="">
                      </a>
                   </div>
                   <div class="col-xl-4 col-3">
                      <a href="">
-                        <img src="../background/photo1.jpeg" alt="">
+                        <img src="./background/photo1.jpeg" alt="">
                      </a>
                   </div>
                </div>
                <div class="row insta">
                   <div class="col-xl-4 col-3" >
                      <a href="">
-                        <img src="../background/photo1.jpeg" alt="">
+                        <img src="./background/photo1.jpeg" alt="">
                      </a>
                   </div>
                   <div class="col-xl-4 col-3">
                      <a href="">
-                        <img src="../background/photo1.jpeg" alt="" >
+                        <img src="./background/photo1.jpeg" alt="" >
                      </a>
                   </div>
                   <div class="col-xl-4 col-3">
                      <a href="">
-                        <img src="../background/photo1.jpeg" alt="">
+                        <img src="./background/photo1.jpeg" alt="">
                      </a>
                   </div>
                </div>
