--- a/blog.html
+++ b/blog.html
@@ -20,6 +20,9 @@
    <link rel="stylesheet" href="/css/load-more-button.css">
    <!-- Link Custom Css -->
    <link rel="stylesheet" href="/css/blog.css">
+   <!-- Font -->
+   <link rel="preconnect" href="https://fonts.gstatic.com">
+   <link href="https://fonts.googleapis.com/css2?family=Changa&display=swap" rel="stylesheet">
    <title>THE UNRAVEL | BLOG</title>
 </head>
 
@@ -32,11 +35,11 @@
                <i class="fas fa-times"></i>
             </div>
             <a href="" class="logo-img" src="">
-               <img src="../img/fav-icon.png" alt="">
+               <img src="./img/fav-icon.png" alt="">
                UNRAVEL</a>
             <ul class="nav-list">
                <li class="nav-item">
-                  <a href="./home.html" class="nav-link">Home</a>
+                  <a href="./index.html" class="nav-link">Home</a>
                </li>
                <li class="nav-item">
                   <a href="./blog.html" class="nav-link">Blog</a>
@@ -100,7 +103,7 @@
                            <div class="row carousel-blog" >
 
                               <div class="col-xl-6 col-9 text-center">
-                                 <img src="../background/photo0.jpeg" alt="">
+                                 <img src="./background/ist-1.jpg" alt="">
                               </div>
                               <div class="col-xl-6 col-9 right-title" >
                                  <div class="title-text ">
@@ -120,7 +123,7 @@
                         <div class="carousel-item">
                            <div class="row carousel-blog" >
                               <div class="col-xl-6 col-9 text-center">
-                                 <img src="../background/photo3.jpeg" alt="">
+                                 <img src="./background/journey-3.jpg" alt="">
                               </div>
                               <div class="col-xl-6 col-9 right-title" >
                                  <div class="title-text ">
@@ -140,7 +143,7 @@
                         <div class="carousel-item">
                            <div class="row carousel-blog" >
                               <div class="col-xl-6 col-9 text-center">
-                                 <img src="../background/photo1.jpeg" alt="">
+                                 <img src="./background/swed-3.jpg" alt="">
                               </div>
                               <div class="col-xl-6 col-9 right-title" >
                                  <div class="title-text ">
@@ -183,7 +186,7 @@
                <div class="top-franc py-1">
                   <div class="top-name dif-frack">
                      <a href="" >
-                        <img src="../background/photo0.jpeg" alt="" >
+                        <img src="./brand/people-1.jpg" alt="" >
                      </a>
                      <a href="">Franc Liberty</a>
                   </div>
@@ -197,13 +200,13 @@
                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                <div class="carousel-inner">
                   <div class="carousel-item active">
-                     <img src="../background/photo0.jpeg" class="d-block w-100" alt="...">
+                     <img src="./background/phil-3.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                     <img src="../background/photo1.jpeg" class="d-block w-100" alt="...">
+                     <img src="./background/ven-1.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                     <img src="../background/bali.jpg" class="d-block w-100" alt="...">
+                     <img src="./background/journey-1.jpg" class="d-block w-100" alt="...">
                   </div>
                </div>
                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -257,11 +260,11 @@
          <!-- Blog Latest -->
          <div class="col-xl-5 col-md-6 col-12 my-2" >
             <div class="top-latest">
-               <img src="../background/photo1.jpeg" alt="">
+               <img src="./img/kyoto-1.jpg" alt="">
                <div class="top-franc py-4">
                   <div class="top-name">
                      <a href="">
-                        <img src="../background/photo3.jpeg" alt="" >
+                        <img src="./brand/people-2.jpg" alt="" >
                      </a>
                      <a href="">Shibuya</a>
                   </div>
@@ -295,11 +298,11 @@
          <!-- Blog Latest -->
          <div class="col-xl-5 col-md-6 col-12 my-2" >
             <div class="top-latest">
-               <img src="../background/bali.jpg" alt="">
+               <img src="./img/sweden-1.jpg" alt="">
                <div class="top-franc py-4">
                   <div class="top-name">
                      <a href="">
-                        <img src="../background/photo0.jpeg" alt="" >
+                        <img src="./brand/people-1.jpg" alt="" >
                      </a>
                      <a href="">Franc Liberty</a>
                   </div>
@@ -357,11 +360,11 @@
             <div class="row py-5">
                <div class="col-xl-12 col-md-12 col-12">
                   <div class="card-feed">
-                     <img src="../background/photo0.jpeg" alt="">
+                     <img src="./img/korean-1.jpg" alt="">
                      <div class="avatar-head" >
                         <div class="avatar-left">
                            <a href="">
-                              <img src="../background/photo3.jpeg" alt="" >
+                              <img src="./brand/people-1.jpg" alt="" >
                            </a>
                            <a href="">Alec Franc</a>
                         </div>
@@ -399,11 +402,11 @@
          <!-- Blog Latest -->
          <div class="col-xl-5 col-md-6 col-12 my-2" >
             <div class="top-latest">
-               <img src="../background/photo3.jpeg" alt="">
+               <img src="./background/phil-3.jpg" alt="">
                <div class="top-franc py-4">
                   <div class="top-name">
                      <a href="">
-                        <img src="../background/photo3.jpeg" alt="" >
+                        <img src="./brand/people-3.jpg" alt="" >
                      </a>
                      <a href="">Neil Francis</a>
                   </div>
@@ -437,11 +440,11 @@
          <!-- Blog Latest -->
          <div class="col-xl-5 col-md-6 col-12 my-2" >
             <div class="top-latest">
-               <img src="../background/bali.jpg" alt="">
+               <img src="./img/paris-1.jpg" alt="">
                <div class="top-franc py-4">
                   <div class="top-name">
                      <a href="">
-                        <img src="../background/photo0.jpeg" alt="" >
+                        <img src="./brand/people-2.jpg" alt="" >
                      </a>
                      <a href="">John Statham</a>
                   </div>
@@ -477,11 +480,11 @@
             <div class="row">
                <div class="col-xl-12 col-md-12 col-12">
                   <div class="card-feed">
-                     <img src="../background/photo3.jpeg" alt="">
+                     <img src="./img/russia-1.jpg" alt="">
                      <div class="avatar-head">
                         <div class="avatar-left">
                            <a href="">
-                              <img src="../background/bali.jpg" alt="">
+                              <img src="./brand/people-3.jpg" alt="">
                            </a>
                            <a href="">Mohammed</a>
                         </div>
@@ -513,11 +516,11 @@
                </div>
                <div class="col-xl-12 col-md-12 col-12 my-5">
                   <div class="card-feed">
-                     <img src="../background/bali.jpg" alt="">
+                     <img src="./background/bali.jpg" alt="">
                      <div class="avatar-head">
                         <div class="avatar-left">
                            <a href="">
-                              <img src="../background/photo0.jpeg" alt="" >
+                              <img src="./brand/people-1.jpg" alt="" >
                            </a>
                            <a href="">Marc</a>
                         </div>
@@ -568,9 +571,9 @@
          <div class="container">
             <div class="row py-3 logo" >
                <div class="col-xl-3 logo-flex" >
-                  <a href=""><img src="../background/photo3.jpeg" alt=""></a>
-                  <a href=""><img src="../background/photo3.jpeg" alt=""></a>
-                  <a href=""><img src="../background/photo3.jpeg" alt=""></a>
+                  <a href=""><img src="./brand/gmail.png" alt=""></a>
+                  <a href=""><img src="./brand/yahoo.png" alt=""></a>
+                  <a href=""><img src="./brand/passport.png" alt=""></a>
                </div>
             </div>
 
@@ -623,34 +626,34 @@
                <div class="row insta" >
                   <div class="col-xl-4 col-3" >
                      <a href="">
-                        <img src="../background/photo1.jpeg" alt="">
+                        <img src="./background/photo1.jpeg" alt="">
                      </a>
                   </div>
                   <div class="col-xl-4 col-3">
                      <a href="">
-                        <img src="../background/photo1.jpeg" alt="">
+                        <img src="./background/photo1.jpeg" alt="">
                      </a>
                   </div>
                   <div class="col-xl-4 col-3">
                      <a href="">
-                        <img src="../background/photo1.jpeg" alt="">
+                        <img src="./background/photo1.jpeg" alt="">
                      </a>
                   </div>
                </div>
                <div class="row insta">
                   <div class="col-xl-4 col-3" >
                      <a href="">
-                        <img src="../background/photo1.jpeg" alt="">
+                        <img src="./background/photo1.jpeg" alt="">
                      </a>
                   </div>
                   <div class="col-xl-4 col-3">
                      <a href="">
-                        <img src="../background/photo1.jpeg" alt="" >
+                        <img src="./background/photo1.jpeg" alt="" >
                      </a>
                   </div>
                   <div class="col-xl-4 col-3">
                      <a href="">
-                        <img src="../background/photo1.jpeg" alt="">
+                        <img src="./background/photo1.jpeg" alt="">
                      </a>
                   </div>
                </div>
