--- a/services.html
+++ b/services.html
@@ -5,17 +5,17 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="Travel Website">
-   <!-- Link Font Awesome -->
-   <link rel="stylesheet" href="/css/all.min.css">
    <!-- Link Favicon -->
    <link rel="shortcut icon" href="/img/fav-icon.png" type="image/x-icon">
+   <!-- Link Font Awesome -->
+   <link rel="stylesheet" href="/css/all.min.css">
    <!-- Link Bootstrap -->
-   <!-- Link Owl Carousel -->
-   <link rel="stylesheet" href="/css/owl.carousel.min.css">
-   <link rel="stylesheet" href="/css/owl.theme.default.min.css">
    <link rel="stylesheet" href="/css/bootstrap.min.css">
    <!-- Link Custom Css -->
    <link rel="stylesheet" href="/css/services.css">
+   <!-- Font -->
+   <link rel="preconnect" href="https://fonts.gstatic.com">
+   <link href="https://fonts.googleapis.com/css2?family=Changa&display=swap" rel="stylesheet">
    <title>THE UNRAVEL | SERVICES</title>
 </head>
 <body>
@@ -27,11 +27,11 @@
                <i class="fas fa-times"></i>
             </div>
             <a href="" class="logo-img" src="" style="color:black;">
-               <img src="../img/fav-icon.png" alt="">
+               <img src="./img/fav-icon.png" alt="">
                UNRAVEL</a>
             <ul class="nav-list">
                <li class="nav-item">
-                  <a href="./home.html" class="nav-link nav-1">Home</a>
+                  <a href="./index.html" class="nav-link nav-1">Home</a>
                </li>
                <li class="nav-item">
                   <a href="./blog.html" class="nav-link nav-1">Blog</a>
@@ -69,7 +69,7 @@
                   </div>
                </div>
                <div class="col-xl-6 col-md-6 col-sm-12">
-                  <img src="../img/banner-image.png" alt="">
+                  <img src="./img/banner-image.png" alt="">
                </div>
             </div>
          </div>
@@ -88,7 +88,7 @@
          </div>
          <div class="row light">
             <div class="col-sm-2 col-sm-3 light-up">
-               <img src="../background/photo1.jpeg" alt=""> </div>
+               <img src="./background/phil-2.jpg" alt=""> </div>
             <div class="col-sm-2 col-sm-3 might">
                <div class="text-paragraph text-center">
                   <h3 class="choice">FLIGHT</h3>
@@ -98,7 +98,7 @@
                </div>
             </div>
             <div class="col-sm-2 col-sm-3 light-up">
-               <img src="../background/photo1.jpeg" alt="">
+               <img src="./background/ist-1.jpg" alt="">
             </div>
             <div class="col-sm-2 col-sm-3 might">
                <div class="text-paragraph text-center">
@@ -117,7 +117,7 @@
                </div>
             </div>
             <div class="col-sm-2 col-sm-3 light-up">
-               <img src="../background/photo1.jpeg" alt=""> </div>
+               <img src="./background/journey-3.jpg" alt=""> </div>
             <div class="col-sm-2 col-sm-3 might">
                <div class="text-paragraph text-center">
                   <h3 class="choice">Motorcycle</h3>
@@ -127,10 +127,10 @@
                </div>
             </div>
             <div class="col-sm-2 col-sm-3 light-up">
-               <img src="../background/photo1.jpeg" alt="">
+               <img src="./background/swed-2.jpg" alt="">
             </div>
             <div class="col-sm-2 col-sm-3 light-up">
-               <img src="../background/photo1.jpeg" alt="" >
+               <img src="./background/ven-1.jpg" alt="" >
             </div>
             <div class="col-sm-2 col-sm-3 might">
                <div class="text-paragraph text-center">
@@ -141,7 +141,7 @@
                </div>
             </div>
             <div class="col-sm-2 col-sm-3 light-up">
-               <img src="../background/photo1.jpeg" alt="">
+               <img src="./background/aus-2.jpg" alt="">
             </div>
             <div class="col-sm-2 col-sm-3 might" >
                <div class="text-paragraph text-center">
@@ -161,7 +161,7 @@
          </div>
          <div class="row">
             <div class="col-xl-6 col-md-6 col-sm-6 ">
-                  <img src="../background/photo3.jpeg" alt="">
+                  <img src="./background/beach-bac01.jpg" alt="">
             </div>
             <div class="col-xl-6 col-md-6 col-sm-6 ">
                <div class="short-story title-x">
@@ -196,21 +196,21 @@
                   <div class="carousel-inner">
                      <div class="carousel-item active">
                         <div class="col-xl-12 col-md-6 col-sm-6 low" >
-                           <img src="../background/bali.jpg" alt="">
+                           <img src="./brand/people-1.jpg" alt="">
                            <h5 class="p-3">Jhon Mars</h5>
                            <h6 class="text-left px-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe iste possimus perferendis doloribus quo provident debitis nisi vitae totam vero.</h6>
                         </div>
                      </div>
                      <div class="carousel-item">
                         <div class="col-xl-12 col-md-6 col-sm-6 low" >
-                           <img src="../background/bali.jpg" alt="">
+                           <img src="./brand/people-3.jpg" alt="">
                            <h5 class="p-3">Nel Gax</h5>
                            <h6 class="text-left px-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe iste possimus perferendis doloribus quo provident debitis nisi vitae totam vero.</h6>
                         </div>
                      </div>
                      <div class="carousel-item">
                         <div class="col-xl-12 col-md-6 col-sm-6 low" >
-                           <img src="../background/bali.jpg" alt="">
+                           <img src="./brand/people-2.jpg" alt="">
                            <h5 class="p-3">Max Dev</h5>
                            <h6 class="text-left px-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe iste possimus perferendis doloribus quo provident debitis nisi vitae totam vero.</h6>
                         </div>
@@ -238,11 +238,11 @@
          <div class="col-lg-3 col-md-6 col-sm-12">
             <div class="services">
                <div class="services-img text-center py-4">
-               <img src="../img/banner-image.png" alt="" >
+               <img src="./img/banner-image.png" alt="" >
                </div>
                <div class="card-body text-center">
                <h5 class="card-title text-uppercase font-roboto">
-                  web dev
+                  Acommodation
                </h5>
                <p class="card-text text-secondary">
                   Nonumy et sed lorem aliquyam justo consetetur sed labore sadipscing. Vero no gubergren et lorem.
@@ -253,11 +253,11 @@
          <div class="col-lg-3 col-md-6 col-sm-12">
             <div class="services">
                <div class="services-img text-center py-4">
-               <img src="../img/banner-image.png" alt="">
+               <img src="./img/banner-image.png" alt="">
                </div>
                <div class="card-body text-center">
                <h5 class="card-title text-uppercase font-roboto">
-                  web dev
+                  ADVENTURE
                </h5>
                <p class="card-text text-secondary">
                   Nonumy et sed lorem aliquyam justo consetetur sed labore sadipscing. Vero no gubergren et lorem.
@@ -268,11 +268,11 @@
          <div class="col-lg-3 col-md-6 col-sm-12">
             <div class="services" >
                <div class="services-img text-center py-4">
-               <img src="../img/banner-image.png" alt="">
+               <img src="./img/banner-image.png" alt="">
                </div>
                <div class="card-body text-center">
                <h5 class="card-title text-uppercase font-roboto">
-                  web dev
+                  TRAVEL
                </h5>
                <p class="card-text text-secondary">
                   Nonumy et sed lorem aliquyam justo consetetur sed labore sadipscing. Vero no gubergren et lorem.
@@ -283,11 +283,11 @@
          <div class="col-lg-3 col-md-6 col-sm-12">
             <div class="services" >
                <div class="services-img text-center py-4">
-               <img src="../img/banner-image.png" alt="">
+               <img src="./img/banner-image.png" alt="">
                </div>
                <div class="card-body text-center">
                <h5 class="card-title text-uppercase font-roboto">
-                  web dev
+                  EXPLORE
                </h5>
                <p class="card-text">
                   Nonumy et sed lorem aliquyam justo consetetur sed labore sadipscing. Vero no gubergren et lorem.
@@ -312,51 +312,51 @@
             <div class="col-sm-2 col-sm-3">
                <h5>Contact Us</h5> 
                <a href=""><i class="fab fa-whatsapp"></i></a>
-               <h6 class="text-center">91 549 323453</h6>
+               <h6 class="text-center">0123 4832 4231</h6>
             </div>
             <div class="col-sm-2 col-sm-3">
                <h5>Facebook</h5>
                <a href=""><i class="fab fa-facebook"></i></a>
-               <h6 class="text-center">Devenv</h6>
+               <h6 class="text-center">www.facebook.com/devenv</h6>
             </div>
             <div class="col-sm-2 col-sm-3">
                <h5>Youtube</h5>
                <a href=""><i class="fab fa-youtube"></i></a>
-               <h6 class="text-center">Devenv_12</h6>
+               <h6 class="text-center">Devenv</h6>
             </div>
             <div class="col-sm-2 col-sm-3">
                <h5>Instagram</h5>
                <div class="row insta" >
                   <div class="col-xl-4 col-3" >
                      <a href="">
-                        <img src="../background/photo1.jpeg" alt="">
+                        <img src="./background/photo1.jpeg" alt="">
                      </a>
                   </div>
                   <div class="col-xl-4 col-3">
                      <a href="">
-                        <img src="../background/photo1.jpeg" alt="">
+                        <img src="./background/photo1.jpeg" alt="">
                      </a>
                   </div>
                   <div class="col-xl-4 col-3">
                      <a href="">
-                        <img src="../background/photo1.jpeg" alt="">
+                        <img src="./background/photo1.jpeg" alt="">
                      </a>
                   </div>
                </div>
                <div class="row insta">
                   <div class="col-xl-4 col-3" >
                      <a href="">
-                        <img src="../background/photo1.jpeg" alt="">
+                        <img src="./background/photo1.jpeg" alt="">
                      </a>
                   </div>
                   <div class="col-xl-4 col-3">
                      <a href="">
-                        <img src="../background/photo1.jpeg" alt="" >
+                        <img src="./background/photo1.jpeg" alt="" >
                      </a>
                   </div>
                   <div class="col-xl-4 col-3">
                      <a href="">
-                        <img src="../background/photo1.jpeg" alt="">
+                        <img src="./background/photo1.jpeg" alt="">
                      </a>
                   </div>
                </div>
